# trollstorm

./: .flake8  .gitignore  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yaml
continuous_integration/: environment.yaml
doc/source/: conf.py  index.rst
trollstorm/: __init__.py
trollstorm/tests/: __init__.py  test_init.py
